--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "moment-timezone": "^0.5.45",
     "next": "^14.2.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
