--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "google-fonts": "^1.0.0",
     "moment-timezone": "^0.5.45",
     "next": "^14.2.3",
+    "next-google-fonts": "^2.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
